added apps, form-comment, submit, button, radio components

--- a/pages/form.html
+++ b/pages/form.html
@@ -138,6 +138,49 @@
                 </div>
             </div>
         </fieldset>
+
+        <fieldset class="form-section apps">
+            <div class="content-section__wrapper">
+                <h2 class="form-section__title">
+                    С каким приложением путешествовали?
+                </h2>
+
+                <label class="radio">
+                    <input class="radio__input" type="radio" value="iOS" name="apps" checked>
+                    <span class="radio__box"></span>
+                    Pink для iOS
+                </label>
+
+                <label class="radio">
+                    <input class="radio__input" type="radio" value="Android" name="apps">
+                    <span class="radio__box"></span>
+                    Pink на Android
+                </label>
+
+                <label class="radio">
+                    <input class="radio__input" type="radio" value="Windows Phone" name="apps">
+                    <span class="radio__box"></span>
+                    Windows Phone
+                </label>
+            </div>
+        </fieldset>
+
+        <fieldset class="form-section form-comment">
+            <div class="content-section__wrapper">
+                <h2 class="form-section__title">
+                    Опишите свои эмоции
+                </h2>
+
+                <textarea class="form-section__textarea" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            </div>
+        </fieldset>
+
+        <div class="form-section submit">
+            <div class="content-section__wrapper">
+                <button class="button" type="submit">отправить форму</button>
+                <span class="form-section__subtitle"><span>*</span> — обязательные поля</span>
+            </div>
+        </div>
     </form>
 </main>
 
