--- a/pages/form.html
+++ b/pages/form.html
@@ -129,7 +129,7 @@
             <div class="content-section__wrapper">
                 <div class="form-section__item">
                     <span class="form-section__label">номер телефона</span>
-                    <input class="form-section__input" type="text" placeholder="Номер, пожалуйста" required>
+                    <input class="form-section__input" type="text" placeholder="Номер, пожалуйста">
                 </div>
 
                 <div class="form-section__item">
@@ -213,6 +213,44 @@
         </div>
     </div>
 </footer>
+
+<div class="pop-up">
+    <div class="pop-up__wrapper">
+        <div class="content-section__wrapper">
+            <h3 class="pop-up__title">Что-то пошло не так</h3>
+
+            <p class="pop-up__text">
+                Проверьте поля, выделенные красным,
+                скорее всего вы забыли их заполнить
+            </p>
+        </div>
+
+        <div class="pop-up__footer">
+            <div class="content-section__wrapper">
+                <button class="button">ок</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="pop-up pop-up--success">
+    <div class="pop-up__wrapper">
+        <div class="content-section__wrapper">
+            <h3 class="pop-up__title">Ваша заявка отправлена</h3>
+
+            <p class="pop-up__text">
+                Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и
+                оповестим вас.
+            </p>
+        </div>
+
+        <div class="pop-up__footer">
+            <div class="content-section__wrapper">
+                <button type="button" class="button">закрыть окно</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="../js/script.js"></script>
 </body>
