changed structure of radio and check components

--- a/pages/form.html
+++ b/pages/form.html
@@ -87,41 +87,53 @@
                     достижения в путешествии
                 </h2>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox" checked>
-                    <span class="check__box"></span>
-                    Сделал селфи с акулой
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox" checked>
+                        <span class="check__box"></span>
+                        Сделал селфи с акулой
+                    </label>
+                </div>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox" checked>
-                    <span class="check__box"></span>
-                    Обгорел на пляже
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox" checked>
+                        <span class="check__box"></span>
+                        Обгорел на пляже
+                    </label>
+                </div>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox">
-                    <span class="check__box"></span>
-                    Видел Чака Норриса
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox">
+                        <span class="check__box"></span>
+                        Видел Чака Норриса
+                    </label>
+                </div>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox">
-                    <span class="check__box"></span>
-                    Накупил сувениров
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox">
+                        <span class="check__box"></span>
+                        Накупил сувениров
+                    </label>
+                </div>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox" checked>
-                    <span class="check__box"></span>
-                    Удержал башню
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox" checked>
+                        <span class="check__box"></span>
+                        Удержал башню
+                    </label>
+                </div>
 
-                <label class="check">
-                    <input class="check__input" type="checkbox">
-                    <span class="check__box"></span>
-                    Разгромил отель
-                </label>
+                <div class="check">
+                    <label class="check__container">
+                        <input class="check__input" type="checkbox">
+                        <span class="check__box"></span>
+                        Разгромил отель
+                    </label>
+                </div>
             </div>
         </fieldset>
 
@@ -145,23 +157,29 @@
                     С каким приложением путешествовали?
                 </h2>
 
-                <label class="radio">
-                    <input class="radio__input" type="radio" value="iOS" name="apps" checked>
-                    <span class="radio__box"></span>
-                    Pink для iOS
-                </label>
+                <div class="radio">
+                    <label class="radio__container">
+                        <input class="radio__input" type="radio" value="iOS" name="apps" checked>
+                        <span class="radio__box"></span>
+                        Pink для iOS
+                    </label>
+                </div>
 
-                <label class="radio">
-                    <input class="radio__input" type="radio" value="Android" name="apps">
-                    <span class="radio__box"></span>
-                    Pink на Android
-                </label>
+                <div class="radio">
+                    <label class="radio__container">
+                        <input class="radio__input" type="radio" value="Android" name="apps">
+                        <span class="radio__box"></span>
+                        Pink на Android
+                    </label>
+                </div>
 
-                <label class="radio">
-                    <input class="radio__input" type="radio" value="Windows Phone" name="apps">
-                    <span class="radio__box"></span>
-                    Windows Phone
-                </label>
+                <div class="radio">
+                    <label class="radio__container">
+                        <input class="radio__input" type="radio" value="Windows Phone" name="apps">
+                        <span class="radio__box"></span>
+                        Windows Phone
+                    </label>
+                </div>
             </div>
         </fieldset>
 
