added media queries to section component and changed some components

--- a/pages/form.html
+++ b/pages/form.html
@@ -52,11 +52,11 @@
 <main class="main">
     <section class="content-section ad">
         <div class="content-section__wrapper">
-            <h2 class="ad__title">
+            <p class="ad__title">
                 Поделитесь своей историей и получите
                 шанс выиграть ценный приз — 1000
                 миль на вашу бонусную карту! <span class="hide-on-mobile">Пожалуйста, заполните форму ниже:</span>
-            </h2>
+            </p>
         </div>
     </section>
 
