added routes for navigation and logos

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 </head>
-
+<body>
 <header class="header" id="header">
     <div class="header__wrapper">
         <div class="burger">
             <div class="burger__wrapper">
-                <a class="burger__link-logo" href="/">
+                <a class="burger__link-logo" href="index.html">
                     <picture>
                         <source srcset="img/logo-header.svg" media="(min-width: 1024px)">
                         <source srcset="img/logo-header-tablet.svg" media="(min-width: 768px) and (max-width: 1023px)">
@@ -30,9 +30,9 @@
         </div>
 
         <nav class="navigation">
-            <a class="navigation__link" href="javascript:;">Главная</a>
+            <a class="navigation__link" href="index.html">Главная</a>
             <a class="navigation__link" href="javascript:;">Фотографии</a>
-            <a class="navigation__link" href="javascript:;">Конкурс</a>
+            <a class="navigation__link" href="pages/form.html">Конкурс</a>
             <a class="navigation__link" href="javascript:;">HTML Academy</a>
         </nav>
     </div>
@@ -444,7 +444,7 @@
 
 <footer class="content-section footer">
     <div class="content-section__wrapper">
-        <a class="footer__link-logo" href="/">
+        <a class="footer__link-logo" href="index.html">
             <picture>
                 <source srcset="img/logo-footer.svg" media="(min-width: 1024px)">
                 <img class="footer__logo" src="img/logo-footer--tablet.svg" alt="footer-logo">
