--- a/pages/form.html
+++ b/pages/form.html
@@ -13,7 +13,7 @@
     <div class="header__wrapper">
         <div class="burger">
             <div class="burger__wrapper">
-                <a class="burger__link-logo" href="/">
+                <a class="burger__link-logo" href="../index.html">
                     <picture>
                         <source srcset="../img/logo-header.svg" media="(min-width: 1024px)">
                         <source srcset="../img/logo-header-tablet.svg" media="(min-width: 768px) and (max-width: 1023px)">
@@ -29,9 +29,9 @@
         </div>
 
         <nav class="navigation">
-            <a class="navigation__link" href="javascript:;">Главная</a>
+            <a class="navigation__link" href="../index.html">Главная</a>
             <a class="navigation__link" href="javascript:;">Фотографии</a>
-            <a class="navigation__link" href="javascript:;">Конкурс</a>
+            <a class="navigation__link" href="form.html">Конкурс</a>
             <a class="navigation__link" href="javascript:;">HTML Academy</a>
         </nav>
     </div>
@@ -74,8 +74,8 @@
                 </div>
 
                 <div class="form-section__item">
-                    <label class="form-section__label" for="second-name">отчество:</label>
-                    <input class="form-section__input" type="text" id="second-name" placeholder="Ну и отчество тоже">
+                    <label class="form-section__label" for="secondName">отчество:</label>
+                    <input class="form-section__input" type="text" id="secondName" placeholder="Ну и отчество тоже">
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
 
 <footer class="content-section footer footer--form-mobile">
     <div class="content-section__wrapper">
-        <a class="footer__link-logo" href="/">
+        <a class="footer__link-logo" href="../index.html">
             <picture>
                 <source srcset="../img/logo-footer.svg" media="(min-width: 1024px)">
                 <img class="footer__logo" src="../img/logo-footer--tablet.svg" alt="footer-logo">
@@ -232,43 +232,47 @@
     </div>
 </footer>
 
-<div class="pop-up">
-    <div class="pop-up__wrapper">
-        <div class="content-section__wrapper">
-            <h3 class="pop-up__title">Что-то пошло не так</h3>
-
-            <p class="pop-up__text">
-                Проверьте поля, выделенные красным,
-                скорее всего вы забыли их заполнить
-            </p>
-        </div>
-
-        <div class="pop-up__footer">
+<template id="popUpError">
+    <div class="pop-up">
+        <div class="pop-up__wrapper">
             <div class="content-section__wrapper">
-                <button class="button">ок</button>
+                <h3 class="pop-up__title">Что-то пошло не так</h3>
+
+                <p class="pop-up__text">
+                    Проверьте поля, выделенные красным,
+                    скорее всего вы забыли их заполнить
+                </p>
+            </div>
+
+            <div class="pop-up__footer">
+                <div class="content-section__wrapper">
+                    <button class="button">ок</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</template>
 
-<div class="pop-up pop-up--success">
-    <div class="pop-up__wrapper">
-        <div class="content-section__wrapper">
-            <h3 class="pop-up__title">Ваша заявка отправлена</h3>
-
-            <p class="pop-up__text">
-                Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и
-                оповестим вас.
-            </p>
-        </div>
-
-        <div class="pop-up__footer">
+<template id="popUpSuccess">
+    <div class="pop-up pop-up--success">
+        <div class="pop-up__wrapper">
             <div class="content-section__wrapper">
-                <button type="button" class="button">закрыть окно</button>
+                <h3 class="pop-up__title">Ваша заявка отправлена</h3>
+
+                <p class="pop-up__text">
+                    Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и
+                    оповестим вас.
+                </p>
+            </div>
+
+            <div class="pop-up__footer">
+                <div class="content-section__wrapper">
+                    <button type="button" class="button">закрыть окно</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</template>
 
 <script src="../js/script.js"></script>
 </body>
