changed tags for form-content__item

--- a/pages/form.html
+++ b/pages/form.html
@@ -63,20 +63,20 @@
     <form class="content-section form">
         <div class="form-section user-data">
             <div class="content-section__wrapper">
-                <div class="form-section__item">
-                    <label class="form-section__label" for="surname">фамилия:</label>
-                    <input class="form-section__input" type="text" id="surname" placeholder="Укажите фамилию *" required>
-                </div>
+                <label class="form-section__item">
+                    <span class="form-section__label">фамилия:</span>
+                    <input class="form-section__input" type="text" placeholder="Укажите фамилию *" required>
+                </label>
 
-                <div class="form-section__item">
-                    <label class="form-section__label" for="name">имя:</label>
-                    <input class="form-section__input" id="name" type="text" placeholder="Введите ваш имя *" required>
-                </div>
+                <label class="form-section__item">
+                    <span class="form-section__label">имя:</span>
+                    <input class="form-section__input" type="text" placeholder="Введите ваш имя *" required>
+                </label>
 
-                <div class="form-section__item">
-                    <label class="form-section__label" for="secondName">отчество:</label>
-                    <input class="form-section__input" type="text" id="secondName" placeholder="Ну и отчество тоже">
-                </div>
+                <label class="form-section__item">
+                    <span class="form-section__label">отчество:</span>
+                    <input class="form-section__input" type="text" placeholder="Ну и отчество тоже">
+                </label>
             </div>
         </div>
 
@@ -139,15 +139,15 @@
 
         <fieldset class="form-section form-contacts">
             <div class="content-section__wrapper">
-                <div class="form-section__item">
-                    <label class="form-section__label" for="tel">номер телефона</label>
-                    <input class="form-section__input" id="tel" type="text" placeholder="Номер, пожалуйста">
-                </div>
+                <label class="form-section__item">
+                    <span class="form-section__label">номер телефона</span>
+                    <input class="form-section__input" type="text" placeholder="Номер, пожалуйста">
+                </label>
 
-                <div class="form-section__item">
-                    <label class="form-section__label" for="email">адрес почты</label>
-                    <input class="form-section__input" id="email" type="text" placeholder="Введите почту *" required>
-                </div>
+                <label class="form-section__item">
+                    <span class="form-section__label">адрес почты</span>
+                    <input class="form-section__input" type="text" placeholder="Введите почту *" required>
+                </label>
             </div>
         </fieldset>
 
