added tablet version for banner, ad, user-data

--- a/pages/form.html
+++ b/pages/form.html
@@ -37,7 +37,7 @@
     </div>
 </header>
 
-<div class="banner banner--form-mobile">
+<div class="banner banner--form">
     <div class="banner-bg__wrapper">
         <div class="banner-bg"></div>
     </div>
