added tablet version for pop-up component

--- a/pages/form.html
+++ b/pages/form.html
@@ -247,7 +247,7 @@
     <div class="pop-up">
         <div class="pop-up__wrapper">
             <div class="content-section__wrapper">
-                <h3 class="pop-up__title">Что-то пошло не так</h3>
+                <h3 class="pop-up__title">Что-то пошло не так!</h3>
 
                 <p class="pop-up__text">
                     Проверьте поля, выделенные красным,
