fixed banner, content-section, apps, user-data, form, ad components

--- a/pages/form.html
+++ b/pages/form.html
@@ -145,8 +145,8 @@
                     <div class="form-section__item-wrapper">
                         <input class="form-section__input" type="text" placeholder="Номер, пожалуйста">
                         <span class="form-section__input-logo">
-                            <img class="form-section__input-icon" src="../img/phone.svg" alt="tel">
-                        </span>
+                                <img class="form-section__input-icon" src="../img/phone.svg" alt="tel">
+                            </span>
                     </div>
                 </label>
 
@@ -156,8 +156,8 @@
                     <div class="form-section__item-wrapper">
                         <input class="form-section__input" type="text" placeholder="Введите почту *" required>
                         <span class="form-section__input-logo">
-                            <img class="form-section__input-icon" src="../img/mail.svg" alt="tel">
-                        </span>
+                                <img class="form-section__input-icon" src="../img/mail.svg" alt="tel">
+                            </span>
                     </div>
                 </label>
             </div>
@@ -200,7 +200,8 @@
                 <label for="comment">Опишите свои эмоции</label>
             </legend>
             <div class="content-section__wrapper">
-                <textarea class="form-section__textarea" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+                <textarea class="form-section__textarea" id="comment"
+                          placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
         </fieldset>
 
