added desktop version for form-comment, form-contants, achievements, submit components

--- a/pages/form.html
+++ b/pages/form.html
@@ -86,52 +86,59 @@
                 достижения в путешествии
             </legend>
             <div class="content-section__wrapper">
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox" checked>
-                        <span class="check__box"></span>
-                        Сделал селфи с акулой
-                    </label>
+                <div class="achievements__items-wrapper">
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox" checked>
+                            <span class="check__box"></span>
+                            Сделал селфи с акулой
+                        </label>
+                    </div>
+
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox" checked>
+                            <span class="check__box"></span>
+                            Обгорел на пляже
+                        </label>
+                    </div>
                 </div>
 
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox" checked>
-                        <span class="check__box"></span>
-                        Обгорел на пляже
-                    </label>
+                <div class="achievements__items-wrapper">
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox">
+                            <span class="check__box"></span>
+                            Видел Чака Норриса
+                        </label>
+                    </div>
+
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox">
+                            <span class="check__box"></span>
+                            Накупил сувениров
+                        </label>
+                    </div>
                 </div>
 
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox">
-                        <span class="check__box"></span>
-                        Видел Чака Норриса
-                    </label>
-                </div>
 
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox">
-                        <span class="check__box"></span>
-                        Накупил сувениров
-                    </label>
-                </div>
+                <div class="achievements__items-wrapper">
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox" checked>
+                            <span class="check__box"></span>
+                            Удержал башню
+                        </label>
+                    </div>
 
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox" checked>
-                        <span class="check__box"></span>
-                        Удержал башню
-                    </label>
-                </div>
-
-                <div class="check">
-                    <label class="check__container">
-                        <input class="check__input" type="checkbox">
-                        <span class="check__box"></span>
-                        Разгромил отель
-                    </label>
+                    <div class="check">
+                        <label class="check__container">
+                            <input class="check__input" type="checkbox">
+                            <span class="check__box"></span>
+                            Разгромил отель
+                        </label>
+                    </div>
                 </div>
             </div>
         </fieldset>
@@ -208,7 +215,7 @@
         <div class="form-section submit">
             <div class="content-section__wrapper">
                 <button class="button" type="submit">отправить форму</button>
-                <span class="form-section__subtitle"><span>*</span> — обязательные поля</span>
+                <span class="form-section__subtitle"><i>*</i> — обязательные <span class="hide-on-tablet">для заполения</span> поля</span>
             </div>
         </div>
     </form>
