--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <nav class="navigation">
             <a class="navigation__link" href="index.html">Главная</a>
-            <a class="navigation__link" href="javascript:;">Фотографии</a>
+            <a class="navigation__link" href="pages/gallery.html">Фотографии</a>
             <a class="navigation__link" href="pages/form.html">Конкурс</a>
             <a class="navigation__link" href="javascript:;">HTML Academy</a>
         </nav>
