--- a/pages/form.html
+++ b/pages/form.html
@@ -30,7 +30,7 @@
 
         <nav class="navigation">
             <a class="navigation__link" href="../index.html">Главная</a>
-            <a class="navigation__link" href="javascript:;">Фотографии</a>
+            <a class="navigation__link" href="gallery.html">Фотографии</a>
             <a class="navigation__link" href="form.html">Конкурс</a>
             <a class="navigation__link" href="javascript:;">HTML Academy</a>
         </nav>
