changed structure of form and created title component

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -49,6 +49,17 @@
     </section>
 </div>
 
+<main class="main">
+    <section class="content-section gallery-title">
+        <div class="content-section__wrapper">
+            <p class="title">
+                Взгляните на фотографии, которые выкладывают пользователи!
+                Видите, как не хватает ваших?
+            </p>
+        </div>
+    </section>
+</main>
+
 <footer class="content-section footer footer--form-mobile">
     <div class="content-section__wrapper">
         <a class="footer__link-logo" href="../index.html">
