--- a/pages/form.html
+++ b/pages/form.html
@@ -52,7 +52,7 @@
 <main class="main">
     <section class="content-section ad">
         <div class="content-section__wrapper">
-            <p class="ad__title">
+            <p class="title">
                 Поделитесь своей историей и получите
                 шанс выиграть ценный приз — 1000
                 миль на вашу бонусную карту! <span class="hide-on-mobile">Пожалуйста, заполните форму ниже:</span>
